--- a/src/style/mixin.less
+++ b/src/style/mixin.less
@@ -70,3 +70,19 @@
 	justify-content: @type;
 
 }
+/deep/.el-submenu__title{
+	color: #fff;
+}
+/deep/.el-menu{
+	background-color: #1f2d3d;
+}
+
+/deep/.el-submenu__title:hover{
+	background-color: #48576a;
+}
+/deep/.el-menu-item{
+	color: #fff;
+}
+/deep/.el-menu-item.is-active{
+	color: #409EFF;
+}
